--- a/docs-2.0-zh/3.ngql-guide/5.operators/6.set.md
+++ b/docs-2.0-zh/3.ngql-guide/5.operators/6.set.md
@@ -122,7 +122,7 @@ nebula> GO FROM "player102" OVER follow \
 +----+--------+-----+
 +----+--------+-----+
 
-# 返回 player102 的目标点和边数据与 player100 的目标点和边数据之间的交集。
+# 返回 player102 的邻居和边数据与 player100 的邻居和边数据之间的交集。
 nebula> MATCH (v:player)-[e:follow]->(v2) \
         WHERE id(v) == "player102" \
         RETURN id(v2) As id, e.degree As Degree, v2.player.age AS Age \
@@ -169,7 +169,7 @@ nebula> GO FROM "player100" OVER follow YIELD dst(edge) \
 | "player125" |
 +-------------+
 
-# 返回在 player102 的目的点中，但不在 player100 的目的点中的元素。
+# 返回在 player102 的邻居中，但不在 player100 的邻居中的元素。
 nebula> GO FROM "player102" OVER follow YIELD dst(edge) AS id \
         MINUS \
         GO FROM "player100" OVER follow YIELD dst(edge) AS id;
@@ -179,7 +179,7 @@ nebula> GO FROM "player102" OVER follow YIELD dst(edge) AS id \
 | "player100" |
 +-------------+
 
-# 返回在 player102 的目的点中，但不在 player100 的目的点中的元素。
+# 返回在 player102 的邻居中，但不在 player100 的邻居中的元素。
 nebula> MATCH (v:player)-[e:follow]->(v2) \
         WHERE id(v) =="player102" \
         RETURN id(v2) AS id\
