--- a/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md
@@ -154,7 +154,8 @@ spec:
       # Once set, the zone name cannot be changed.
       # It is recommended to set an odd number of zones.
       zone_list: az1,az2,az3 
-      validate_session_timestamp: "false"
+      # Whether to enable the timestamp validation of the session.
+      validate_session_timestamp: "true"
     # LM access address and port number.
     licenseManagerURL: "192.168.8.xxx:9119"
     resources:
