--- a/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
@@ -33,8 +33,9 @@ For all encryption scenarios, see [Authentication policies](../../../7.data-secu
 
 NebulaGraph Operator supports enabling mTLS with certificate hot-reloading.
 
-The following provides examples of the configuration file to enable mTLS between the client and the Graph service, and between services.
+### Examples
 
+The following provides examples of the cluster configuration file to enable mTLS between the client and the Graph service, and between services.
 
 ??? info "View sample configurations of mTLS between services"
 
@@ -57,7 +58,7 @@ The following provides examples of the configuration file to enable mTLS between
         # if no IP SAN is configured for the certificate,
         # the value of `insecureSkipVerify` must be set to `true`.
         insecureSkipVerify: true
-        # The following parameters are example configurations for passing in certificates by creating a Secret.
+        # The following fields are example configurations for passing in certificates by creating a Secret.
         # clientSecret: "client-cert"
         # clientCert: "tls.crt"
         # clientKey: "tls.key"
@@ -65,14 +66,14 @@ The following provides examples of the configuration file to enable mTLS between
         # caCert: "tls.crt"
       graphd:
         config:
-          # The following parameters are used to enable mTLS between services.
+          # The following fields are used to enable mTLS between services.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true" 
-          # The following parameters are required for creating a cluster with zones.
+          # The following fields are required for creating a cluster with zones.
           # accept_partial_success: "true"
           # prioritize_intra_zone_reading: "true"
           # sync_meta_when_use_space: "true"
@@ -124,8 +125,9 @@ The following provides examples of the configuration file to enable mTLS between
           # Zone names CANNOT be modified once set.
           # It's suggested to set an odd number of zones.
           # zone_list: az1,az2,az3 
-          validate_session_timestamp: "false"
-          # The following parameters are used to enable mTLS between services.
+          # Whether to enable the timestamp validation of the session.
+          validate_session_timestamp: "true"
+          # The following fields are used to enable mTLS between services.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
@@ -181,7 +183,7 @@ The following provides examples of the configuration file to enable mTLS between
           storageClassName: local-path
       storaged:
         config:
-          # The following parameters are used to enable mTLS between services.
+          # The following fields are used to enable mTLS between services.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
@@ -265,13 +267,13 @@ The following provides examples of the configuration file to enable mTLS between
         maxRequests: 20
       graphd:
         config:
-          # The following parameters are used to enable mTLS between the client and the Graph service.
+          # The following fields are used to enable mTLS between the client and the Graph service.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
           key_path: certs/server.key
           enable_graph_ssl: "true"
-          # The following parameters are required for creating a cluster with zones.
+          # The following fields are required for creating a cluster with zones.
           # accept_partial_success: "true"
           # prioritize_intra_zone_reading: "true"
           # sync_meta_when_use_space: "true"
@@ -322,7 +324,8 @@ The following provides examples of the configuration file to enable mTLS between
         # Zone names CANNOT be modified once set.
         # It's suggested to set an odd number of zones.
         # zone_list: az1,az2,az3 
-        validate_session_timestamp: "false"
+        # Whether to enable the timestamp validation of the session.
+        validate_session_timestamp: "true"
         licenseManagerURL: "192.168.8.xxx:9119"
         resources:
           requests:
@@ -380,214 +383,323 @@ The following provides examples of the configuration file to enable mTLS between
       #   whenUnsatisfiable: "DoNotSchedule"
     ```
 
-### Configure `spec.<meta|graph|storage>.config`
+### Must-have fields
 
-To enable mTLS between services (Graph, Meta, and Storage), add the following fields under the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` respectively in the cluster configuration file.
+The following only lists the fields that must be configured to enable mTLS with certificate hot-reloading. For details about other fields, see the above examples.
 
-```yaml
-spec:
-  graph:
-    config:
-      ca_client_path: certs/root.crt
-      ca_path: certs/root.crt
-      cert_path: certs/server.crt
-      key_path: certs/server.key
-      enable_meta_ssl: "true"
-      enable_storage_ssl: "true"
-  metad:
-    config:
-      ca_client_path: certs/root.crt
-      ca_path: certs/root.crt
-      cert_path: certs/server.crt
-      key_path: certs/server.key
-      enable_meta_ssl: "true"
-      enable_storage_ssl: "true"
-  storaged:
-    config:
-      ca_client_path: certs/root.crt
-      ca_path: certs/root.crt
-      cert_path: certs/server.crt
-      key_path: certs/server.key
-      enable_meta_ssl: "true"
-      enable_storage_ssl: "true"
-```
+=== "mTLS between services"
 
-To enable mTLS between the client and the Graph service, add the following fields under the `spec.graphd.config` in the cluster configuration file. The paths specified in fields with `*_path` correspond to file paths relative to `/user/local/nebula`. **It's important to avoid using absolute paths to prevent path recognition errors.**
+    #### `spec.sslCerts`
 
-```yaml
-spec:
-  graph:
-    config:
-      ca_client_path: certs/root.crt
-      ca_path: certs/root.crt
-      cert_path: certs/server.crt
-      key_path: certs/server.key
-      enable_graph_ssl: "true"
-```
+    The `spec.sslCerts` field specifies the encryption certificates for NebulaGraph Operator and [nebula-agent](https://github.com/vesoft-inc/nebula-agent) (if you do not use the default nebula-agent image). As NebulaGraph Operator needs to communicate with the Meta and Storage services, you must configure `spec.sslCerts` in the cluster configuration file to set certificates for it when enabling mTLS between services. 
 
-### Configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
+    You can configure the environment variables of NebulaGraph Operator in the [nebula-operator chart configuration file](../../3.operator-management/3.1.customize-installation.md) to obtain local certificates or create a Secret and specify it in the cluster configuration file to pass in the certificates. Note that when environment variables are used, the secrets under the `spec.sslCerts` section are ignored.
 
-`initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. 
+    - To obtain certificates locally through environment variables, first [update](../../3.operator-management/3.2.update-operator.md) the `controllerManager.env` value to set the certificate environment variables for NebulaGraph Operator in the [chart configuration file of NebulaGraph Operator](../../3.operator-management/3.1.customize-installation.md).
 
-- For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
-- For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
+      The nebula-operator chart allows configuration of the init container, sidecar container, volumes, and volumeMounts within the controller-manager Pod for automatically generating and updating certificates for NebulaGraph Operator. It accesses the certificates generated by the sidecar-container through the environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH`. To generate certificates, you need to place the sidecar-container and the controller-manager container in the same Pod and share the certificate directory credentials. The controller-manager then reads the client-side certificates from the environment variables and establishes a mutual TLS connection with the Meta and Storage services. Example:
 
-Details about these fields are as follows:
+      !!! note
 
-- **initContainers**
+            When the following certificate environment variables are configured, the secrets under `spec.sslCerts` in the cluster configuration file are ignored.
 
-  The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how a volume specified by `volumes`, shared with the NebulaGraph container, is mounted, providing read and write access. 
+      ```yaml title="nebula-operator_chart_configuration_file.yaml"
+      ...
+      controllerManager:
+        env:
+        - name: CA_CERT_PATH
+          value: /credentials/root.crt  # Must use absolute paths.
+        - name: CLIENT_CERT_PATH
+          value: /credentials/client.crt # Must use absolute paths.
+        - name: CLIENT_KEY_PATH
+          value: /credentials/client.key # Must use absolute paths.
 
-  In the following example, `init-auth-sidecar` performs the task of copying files from the `certs` directory within the image to `/credentials`. After this task is completed, the init-container exits. 
-
-  Example:
-
-  ```yaml
-  initContainers:
-  - name: init-auth-sidecar
-      command:
-        - /bin/sh
-        - -c
-      args:
-        - cp /certs/* /credentials/
-      imagePullPolicy: Always
-      image: reg.vesoft-inc.com/xxx/xxx:latest
-      volumeMounts:
-        - name: credentials
-          mountPath: /credentials
-  ```
-
-- **sidecarContainers**
-
-  The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions.
-
-  In the example provided, the `auth-sidecar` container employs the `crond` process, which runs a crontab script every minute. This script checks the certificate's expiration status using the `openssl x509 -noout -enddate` command. The `volumeMounts` field specifies how a volume is mounted, and this volume is shared with the NebulaGraph container.
-
-  Example:
-
-  ```yaml
-  sidecarContainers:
-  - name: auth-sidecar
-    imagePullPolicy: Always
-    image: reg.vesoft-inc.com/xxx/xxx:latest
-    volumeMounts:
-      - name: credentials
-        mountPath: /credentials
-  ```
-
-- **volumes**
-
-  The `volumes` field defines the storage volumes that need to be attached to the NebulaGraph pod. In the following example, the `credentials` volume is of type `emptyDir`, which is a temporary storage volume. Multiple containers can mount the `emptyDir` volume, and they all have read and write access to the same files within the volume.
-
-  Example:
-
-  ```yaml
-  volumes:
-  - name: credentials
-    emptyDir:
-      medium: Memory
-  ```
-
-- **volumeMounts**
-
-  The `volumeMounts` field specifies the location within the container where the storage volume is mounted. In the example below, the `credentials` storage volume is mounted at the path `/usr/local/nebula/certs` within the NebulaGraph container.
-
-  Example:
-
-  ```yaml
-  volumeMounts:
-  - name: credentials
-    mountPath: /usr/local/nebula/certs
-  ```
-
-### Configure `sslCerts`
-
-As NebulaGraph Operator needs to communicate with the Meta and Storage services, you must configure `spec.sslCerts` to set certificates for it when enabling mTLS between services.
-
-The `spec.sslCerts` field specifies the encryption certificates for NebulaGraph Operator and [nebula-agent](https://github.com/vesoft-inc/nebula-agent) (if you do not use the default nebula-agent image).
-
-You can create a Secret to pass in the certificates or configure the environment variables of NebulaGraph Operator to obtain local certificates.
-
-- In the [chart configuration file of NebulaGraph Operator](../../3.operator-management/3.1.customize-installation.md), [update](../../3.operator-management/3.2.update-operator.md) the `controllerManager.env` value to set the certificate environment variables.
-
-  The Nebula-Operator chart allows configuration of the init container, sidecar container, volumes, and volumeMounts within the controller-manager Pod. It accesses the certificates generated by the sidecar-container through the environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH`. To generate certificates, you need to place the sidecar-container and the controller-manager container in the same Pod and share the certificate directory credentials. The controller-manager then reads the client-side certificates from the environment variables and establishes a mutual TLS (mTLS) connection with the Meta and Storage services. Example:
-
-  ```yaml
-  ...
-  controllerManager:
-    env:
-    - name: CA_CERT_PATH
-      value: /credentials/root.crt  # Must use absolute paths.
-    - name: CLIENT_CERT_PATH
-      value: /credentials/client.crt # Must use absolute paths.
-    - name: CLIENT_KEY_PATH
-      value: /credentials/client.key # Must use absolute paths.
-
-    extraInitContainers:
-    - name: init-auth-sidecar
-      command:
-      - /bin/sh
-      - -c
-      args:
-      - cp -R /certs/* /credentials/
-      imagePullPolicy: Always
-      image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
-      volumeMounts:
-      - name: credentials
-        mountPath: /credentials
-
-    sidecarContainers:
-      auth-sidecar:
-        imagePullPolicy: Always
-        image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
-        volumeMounts:
+        extraInitContainers:
+        - name: init-auth-sidecar
+          command:
+          - /bin/sh
+          - -c
+          args:
+          - cp -R /certs/* /credentials/
+          imagePullPolicy: Always
+          image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+          volumeMounts:
           - name: credentials
             mountPath: /credentials
 
-    extraVolumes:
+        sidecarContainers:
+          auth-sidecar:
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+
+        extraVolumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+
+        extraVolumeMounts:
+          - name: credentials
+            mountPath: /credentials
+      ```
+
+      Then, explicitly specify the `spec.sslCerts` field in the cluster configuration file. Example:
+
+      ```yaml title="cluster_configuration_file.yaml"
+      spec:
+        sslCerts:
+      ```
+
+    - Alternatively, to pass in the certificates through a Secret, add the following fields under `spec.sslCerts` in the cluster configuration file. 
+  
+      !!! caution
+
+            When the certificate environment variables mentioned above are configured, the following secrets under `spec.sslCerts` are ignored.
+
+      ```yaml title="cluster_configuration_file.yaml"
+      spec:
+        sslCerts:
+          clientSecret: "client-cert" 
+          clientCert: "tls.crt"  # The key name of the certificate in the client certificate Secret, default is "tls.crt".
+          clientKey: "tls.key"   # The key name of the private key in the client certificate Secret, default is "tls.key".
+          caSecret: "ca-cert" # The name of the CA certificate Secret.
+          caCert: "tls.crt"  # The key name of the certificate in the CA certificate Secret, default is "tls.crt".
+      ```
+
+      Ensure that the keys for the certificates and private keys in the created Secret match the values of the `clientCert`, `clientKey`, and `caCert` fields in `spec.sslCerts`. If you've created a Secret of the TLS type, the default key names are `tls.crt` and `tls.key` for the certificate and private key. In this case, you'll need to manually configure `caCert` field with `ca.crt`.
+
+    #### `spec.sslCerts.insecureSkipVerify`
+
+    If an [IP Subject Alternative Name (SAN)](https://www.openssl.org/docs/man1.0.2/man5/x509v3_config.html) is not set for the certificates, regardless of whether certificates are passed in by creating a Secret or obtained locally by configuring NebulaGraph Operator's environment variables, you must set the value of `spec.sslCerts.insecureSkipVerify` to `true`.
+
+
+    Example:
+
+    ```yaml title="cluster_configuration_file.yaml"
+    spec:
+      sslCerts:
+        insecureSkipVerify: true
+    ```
+
+    !!! note
+
+        - The `insecureSkipVerify` field is used to determine whether the client verifies the server's certificate chain and hostname. The default value is `false`. If set to `true`, the client does not verify the server's certificate chain and hostname.
+        - Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
+
+
+    #### `spec.<meta|graph|storage>.config`
+
+    To enable mTLS between services (Graph, Meta, and Storage), add the following fields under the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` respectively in the cluster configuration file.
+
+    ```yaml
+    spec:
+      graph:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"
+      metad:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"
+      storaged:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"
+    ```
+
+    To enable mTLS between the client and the Graph service, add the following fields under the `spec.graphd.config` in the cluster configuration file. The paths specified in fields with `*_path` correspond to file paths relative to `/user/local/nebula`. **It's important to avoid using absolute paths to prevent path recognition errors.**
+
+    ```yaml
+    spec:
+      graph:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_graph_ssl: "true"
+    ```
+
+    #### `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
+
+    `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. 
+
+    - For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
+    - For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
+
+    Details about these fields are as follows:
+
+    - **initContainers**
+
+      The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how a volume specified by `volumes`, shared with the NebulaGraph container, is mounted, providing read and write access. 
+
+      In the following example, `init-auth-sidecar` performs the task of copying files from the `certs` directory within the image to `/credentials`. After this task is completed, the init-container exits. 
+
+      Example:
+
+      ```yaml
+      initContainers:
+      - name: init-auth-sidecar
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - cp /certs/* /credentials/
+          imagePullPolicy: Always
+          image: reg.vesoft-inc.com/xxx/xxx:latest
+          volumeMounts:
+            - name: credentials
+              mountPath: /credentials
+      ```
+
+    - **sidecarContainers**
+
+      The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions.
+
+      In the example provided, the `auth-sidecar` container employs the `crond` process, which runs a crontab script every minute. This script checks the certificate's expiration status using the `openssl x509 -noout -enddate` command. The `volumeMounts` field specifies how a volume is mounted, and this volume is shared with the NebulaGraph container.
+
+      Example:
+
+      ```yaml
+      sidecarContainers:
+      - name: auth-sidecar
+        imagePullPolicy: Always
+        image: reg.vesoft-inc.com/xxx/xxx:latest
+        volumeMounts:
+          - name: credentials
+            mountPath: /credentials
+      ```
+
+    - **volumes**
+
+      The `volumes` field defines the storage volumes that need to be attached to the NebulaGraph pod. In the following example, the `credentials` volume is of type `emptyDir`, which is a temporary storage volume. Multiple containers can mount the `emptyDir` volume, and they all have read and write access to the same files within the volume.
+
+      Example:
+
+      ```yaml
+      volumes:
       - name: credentials
         emptyDir:
           medium: Memory
+      ```
 
-    extraVolumeMounts:
+    - **volumeMounts**
+
+      The `volumeMounts` field specifies the location within the container where the storage volume is mounted. In the example below, the `credentials` storage volume is mounted at the path `/usr/local/nebula/certs` within the NebulaGraph container.
+
+      Example:
+
+      ```yaml
+      volumeMounts:
       - name: credentials
-        mountPath: /credentials
-  ```
-  
-- In the cluster configuration file, create a Secret to pass in the certificates. Example:
+        mountPath: /usr/local/nebula/certs
+      ```
 
-  ```yaml
-  spec:
-    sslCerts:
-      clientSecret: "client-cert" 
-      clientCert: "tls.crt"  # The key name of the certificate in the client certificate Secret, default is "tls.crt".
-      clientKey: "tls.key"   # The key name of the private key in the client certificate Secret, default is "tls.key".
-      caSecret: "ca-cert" # The name of the CA certificate Secret.
-      caCert: "tls.crt"  # The key name of the certificate in the CA certificate Secret, default is "tls.crt".
-  ```
+=== "mTLS between the client and the Graph service"
 
-  !!! caution
+    #### `spec.<meta|graph|storage>.config`
 
-        Ensure that the keys for the certificates and private keys in the created Secret match the values of the `clientCert`, `clientKey`, and `caCert` fields in `spec.sslCerts`. If you've created a Secret of the TLS type, the default key names are `tls.crt` and `tls.key` for the certificate and private key. In this case, you'll need to manually configure `caCert` field with `ca.crt`.
+    To enable mTLS between the client and the Graph service, add the following fields under the `spec.graphd.config` in the cluster configuration file. The paths specified in fields with `*_path` correspond to file paths relative to `/user/local/nebula`. **It's important to avoid using absolute paths to prevent path recognition errors.**
 
-#### Configure `spec.sslCerts.insecureSkipVerify`
+    ```yaml
+    spec:
+      graph:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_graph_ssl: "true"
+    ```
 
-If an [IP Subject Alternative Name (SAN)](https://www.openssl.org/docs/man1.0.2/man5/x509v3_config.html) is not set for the certificates, regardless of whether certificates are passed in by creating a Secret or obtained locally by configuring NebulaGraph Operator's environment variables, you must set the value of `spec.sslCerts.insecureSkipVerify` to `true`.
+    #### `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
 
+    `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. 
 
-Example:
+    - For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
+    - For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
 
-```yaml
-spec:
-  sslCerts:
-    insecureSkipVerify: true
-```
+    Details about these fields are as follows:
 
-!!! note
+    - **initContainers**
 
-    - The `insecureSkipVerify` field is used to determine whether the client verifies the server's certificate chain and hostname. The default value is `false`. If set to `true`, the client does not verify the server's certificate chain and hostname.
-    - Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
+      The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how a volume specified by `volumes`, shared with the NebulaGraph container, is mounted, providing read and write access. 
 
+      In the following example, `init-auth-sidecar` performs the task of copying files from the `certs` directory within the image to `/credentials`. After this task is completed, the init-container exits. 
+
+      Example:
+
+      ```yaml
+      initContainers:
+      - name: init-auth-sidecar
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - cp /certs/* /credentials/
+          imagePullPolicy: Always
+          image: reg.vesoft-inc.com/xxx/xxx:latest
+          volumeMounts:
+            - name: credentials
+              mountPath: /credentials
+      ```
+
+    - **sidecarContainers**
+
+      The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions.
+
+      In the example provided, the `auth-sidecar` container employs the `crond` process, which runs a crontab script every minute. This script checks the certificate's expiration status using the `openssl x509 -noout -enddate` command. The `volumeMounts` field specifies how a volume is mounted, and this volume is shared with the NebulaGraph container.
+
+      Example:
+
+      ```yaml
+      sidecarContainers:
+      - name: auth-sidecar
+        imagePullPolicy: Always
+        image: reg.vesoft-inc.com/xxx/xxx:latest
+        volumeMounts:
+          - name: credentials
+            mountPath: /credentials
+      ```
+
+    - **volumes**
+
+      The `volumes` field defines the storage volumes that need to be attached to the NebulaGraph pod. In the following example, the `credentials` volume is of type `emptyDir`, which is a temporary storage volume. Multiple containers can mount the `emptyDir` volume, and they all have read and write access to the same files within the volume.
+
+      Example:
+
+      ```yaml
+      volumes:
+      - name: credentials
+        emptyDir:
+          medium: Memory
+      ```
+
+    - **volumeMounts**
+
+      The `volumeMounts` field specifies the location within the container where the storage volume is mounted. In the example below, the `credentials` storage volume is mounted at the path `/usr/local/nebula/certs` within the NebulaGraph container.
+
+      Example:
+
+      ```yaml
+      volumeMounts:
+      - name: credentials
+        mountPath: /usr/local/nebula/certs
+      ```
 
 ### Connect to the Graph service
 
