--- a/docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
+++ b/docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
@@ -48,7 +48,7 @@ nGQL allows you to reference edge properties, including user-defined edge proper
 
 | Parameter   | Description                       |
 | :---------- | :------------------               |
-| `$-`        | Used to get the output results of the statement before the pipe in the composite query. For more information, see [Pipe](4.pipe.md). |
+| `$-`        | Used to get the output results of the statement before the pipe in the composite query. For more information, see [Pipe](../5.operators/4.pipe.md). |
 
 ## Examples
 
