--- a/docs-2.0-en/3.ngql-guide/6.functions-and-expressions/4.schema.md
+++ b/docs-2.0-en/3.ngql-guide/6.functions-and-expressions/4.schema.md
@@ -57,7 +57,7 @@ You can also use the property reference symbols (`$^` and `$$`) instead of the `
 
 - `$$` represents the data of the end vertex at the end of exploration.
 
-`properties($^)` and `properties($$)` are generally used in `GO` statements. For more information, see [Property reference](../5.operators/5.property-reference.md).
+`properties($^)` and `properties($$)` are generally used in `GO` statements. For more information, see [Property reference](../4.variable-and-composite-queries/3.property-reference.md).
 
 !!! caution
 
@@ -133,7 +133,7 @@ nebula> GO FROM "player100" OVER follow \
 
 !!! note
 
-    The semantics of the query for the starting vertex with src(edge) and [properties(`$^`)](../5.operators/5.property-reference.md) are different. src(edge) indicates the starting vertex ID of the edge in the graph database, while properties(`$^`) indicates the data of the starting vertex where you start to expand the graph, such as the data of the starting vertex `player100` in the above GO statement. 
+    The semantics of the query for the starting vertex with src(edge) and [properties(`$^`)](../4.variable-and-composite-queries/3.property-reference.md) are different. src(edge) indicates the starting vertex ID of the edge in the graph database, while properties(`$^`) indicates the data of the starting vertex where you start to expand the graph, such as the data of the starting vertex `player100` in the above GO statement. 
 
 ### dst(edge)
 
