--- a/docs-2.0-zh/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
+++ b/docs-2.0-zh/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
@@ -48,7 +48,7 @@ nGQL 允许用户引用边的属性，包括自定义的边属性和四种内置
 
 |引用符|说明|
 |:---|:---|
-|`$-`|引用复合查询中管道符之前的语句输出结果。更多信息请参见[管道符](4.pipe.md)。|
+|`$-`|引用复合查询中管道符之前的语句输出结果。更多信息请参见[管道符](../5.operators/4.pipe.md)。|
 
 
 ## 示例
