--- a/docs-2.0-zh/3.ngql-guide/6.functions-and-expressions/4.schema.md
+++ b/docs-2.0-zh/3.ngql-guide/6.functions-and-expressions/4.schema.md
@@ -62,7 +62,7 @@ nebula> LOOKUP ON player WHERE player.age  > 45 \
 
 - `$$`表示探索结束的终点数据。
 
-`properties($^)`和`properties($$)`一般用于`GO`语句中。更多信息，请参见[属性引用符](../5.operators/5.property-reference.md)。
+`properties($^)`和`properties($$)`一般用于`GO`语句中。更多信息，请参见[属性引用符](../4.variable-and-composite-queries/3.property-reference.md)。
 
 !!! caution
 
@@ -137,7 +137,7 @@ nebula> GO FROM "player100" OVER follow \
 
 !!! note
 
-    src(edge) 和 [properties(`$^`)](../5.operators/5.property-reference.md) 查找起始点的语义不同。src(edge) 始终表示图数据库中边的起始点 ID，而 properties(`$^`) 表示探索开始时的点数据，例如示例中`GO FROM "player100"`中`player100`这个点的数据。
+    src(edge) 和 [properties(`$^`)](../4.variable-and-composite-queries/3.property-reference.md) 查找起始点的语义不同。src(edge) 始终表示图数据库中边的起始点 ID，而 properties(`$^`) 表示探索开始时的点数据，例如示例中`GO FROM "player100"`中`player100`这个点的数据。
 
 ### dst(edge)
 
