--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -86,7 +86,7 @@ LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
 
 **说明**：
 
-- 结合[属性引用符](../5.operators/5.property-reference.md)(`$^`和`$$`)来返回起始点或目标点的属性，例如`YIELD $^.player.name`。
+- 结合[属性引用符](../4.variable-and-composite-queries/3.property-reference.md)(`$^`和`$$`)来返回起始点或目标点的属性，例如`YIELD $^.player.name`。
 - 结合[函数](../6.functions-and-expressions/4.schema.md)`properties($^)`和`properties($$)`来返回起始点或目标点的所有属性；或者在函数中指定属性名，来返回指定的属性，例如`YIELD properties($^).name`。
 - 结合[函数](../6.functions-and-expressions/4.schema.md)`src(edge)`和`dst(edge)`来返回边的起始点或目标点 ID，例如`YIELD src(edge)`。
 
