--- a/docs-2.0-en/nebula-cloud/5.solution/5.1.supporting-application.md
+++ b/docs-2.0-en/nebula-cloud/5.solution/5.1.supporting-application.md
@@ -12,7 +12,7 @@ On the **Applications** page, ecosystem tools are different based on roles and p
 
 ## Dashboard
 
-NebulaGraph Dashboard (Dashboard for short) is a visualization tool that monitors and manages the status of machines and services in NebulaGraph clusters. Currently Dashboard in Cloud only supports [Cluster monitoring](../../nebula-dashboard-ent/4.cluster-operator/2.monitor.md) page.
+NebulaGraph Dashboard (Dashboard for short) is a visualization tool that monitors and manages the status of machines and services in NebulaGraph clusters.
 
 ## Studio
 
@@ -20,4 +20,4 @@ NebulaGraph Studio (Studio in short) is a browser-based visualization tool to ma
 
 ## Explorer
 
-NebulaGraph Explorer (Explorer in short) is a browser-based visualization tool. It is used with the NebulaGraph core to visualize interaction with graph data. Even without any experience in a graph database, you can quickly become a graph exploration expert. For more information, see [What is NebulaGraph Explorer](../../nebula-explorer/about-explorer/ex-ug-what-is-explorer.md).
+NebulaGraph Explorer (Explorer in short) is a browser-based visualization tool. It is used with the NebulaGraph core to visualize interaction with graph data. Even without any experience in a graph database, you can quickly become a graph exploration expert.
