--- a/docs-2.0-zh/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-zh/20.appendix/6.eco-tool-version.md
@@ -123,6 +123,35 @@ Docker Compose 可以快速部署 {{nebula.name}} 集群。如何使用请参见
 | {{ nebula.tag }}| [Java](https://github.com/vesoft-inc/nebula-java/releases/tag/{{java.tag}})  |
 | {{ nebula.tag }}| [HTTP](https://github.com/vesoft-inc/nebula-http-gateway/releases/tag/{{gateway.tag}})  |
 
+## 其他工具
+
+这里罗列社区用户贡献的实用工具，各项目由其发起人及工具爱好者共同维护。
+
+* ORM
+    * Spring Boot 的数据库 ORM 框架：[NGBATIS](https://github.com/nebula-contrib/ngbatis)
+    * Swagger Springboot Demo：[nebula-swagger-demo](https://github.com/nebula-contrib/nebula-swagger-demo)
+    * Java ORM：[graph-ocean](https://github.com/nebula-contrib/graph-ocean)
+    * 搞定 JDBC：[nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)
+    * Python ORM：[nebula-carina](https://github.com/nebula-contrib/nebula-carina)
+    * Golang ORM：[norm](https://github.com/nebula-contrib/norm)
+* 数据工具
+    * Stream ETL：[nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)
+    * 对接 DataX：[nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)
+* 后端服务
+    * 基础服务工程：[graph-gateway](https://github.com/nebula-contrib/graph-gateway)
+* 轻便部署
+    * 10s 拉起 Docker 图库服务：[nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)
+    * 一个运行在浏览器的 NebulaGraph 沙盒：[nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)
+* 测试服务
+    * 轻量级的数据库 Java 测试库：[testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)
+* 客户端
+    * Scala 客户端：[zio-nebula](https://github.com/nebula-contrib/zio-nebula)
+    * Node.js 客户端：[nebula-node](https://github.com/nebula-contrib/nebula-node)
+    * PHP 客户端：[nebula-php](https://github.com/nebula-contrib/nebula-php)
+    * .NET 客户端：[nebula-net](https://github.com/nebula-contrib/nebula-net)
+* 终端工具
+    * JetBrains IDE 系列 nebula-console 插件：[nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)
+
 ## 未发布
 
  - [Rust Client](https://github.com/vesoft-inc/nebula-rust)
