--- a/docs-2.0-en/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-en/20.appendix/6.eco-tool-version.md
@@ -103,7 +103,7 @@ Docker Compose can quickly deploy NebulaGraph clusters. For how to use it, pleas
 |:---|:---|
 | {{ nebula.tag }}  | {{bench.tag}} |
 
-## API, SDK
+## API and SDK
 
 !!! compatibility
 
@@ -117,9 +117,33 @@ Docker Compose can quickly deploy NebulaGraph clusters. For how to use it, pleas
 | {{ nebula.tag }}| [Java](https://github.com/vesoft-inc/nebula-java/releases/tag/{{java.tag}})  |
 | {{ nebula.tag }}| [HTTP](https://github.com/vesoft-inc/nebula-http-gateway/releases/tag/{{gateway.tag}})  |
 
-## Not Released
+## Other utilities and tools
 
- - [Rust Client](https://github.com/vesoft-inc/nebula-rust)
- - [Node.js Client](https://github.com/vesoft-inc/nebula-node)
- - Object Graph Mapping Library (OGM, or ORM) 
+The following are useful utilities and tools contributed and maintained by community users.
+* ORM
+    * Spring Boot-based ORM: [NGBATIS](https://github.com/nebula-contrib/ngbatis)
+    * Swagger Springboot Demo: [nebula-swagger-demo](https://github.com/nebula-contrib/nebula-swagger-demo)
+    * Java ORM: [graph-ocean](https://github.com/nebula-contrib/graph-ocean)
+    * JDBC Connector: [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)
+    * Python ORM: [nebula-carina](https://github.com/nebula-contrib/nebula-carina)
+    * Golang ORM: [norm](https://github.com/nebula-contrib/norm)
+* Data processing
+    * Stream ETL: [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)
+    * DataX Plugin: [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)
+* Backend services
+    * Infrastructure services:[graph-gateway](https://github.com/nebula-contrib/graph-gateway)
+* Quick deployment
+    * Getting started with NebulaGraph in Docker Desktop: [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)
+    * Running NebulaGraph in a browser: [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)
+* Testing
+    * Java testing library: [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)
+* Clients
+    * Scala client: [zio-nebula](https://github.com/nebula-contrib/zio-nebula)
+    * Node.js client: [nebula-node](https://github.com/nebula-contrib/nebula-node)
+    * PHP client: [nebula-php](https://github.com/nebula-contrib/nebula-php)
+    * .NET client: [nebula-net](https://github.com/nebula-contrib/nebula-net)
+* Terminal 
+    * Nebula-console plugin for JetBrains IDEs: [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)
+
+
 
