--- a/docs-2.0-zh/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-zh/20.appendix/6.eco-tool-version.md
@@ -131,7 +131,7 @@ Docker Compose 可以快速部署 {{nebula.name}} 集群。如何使用请参见
     * Spring Boot 的数据库 ORM 框架：[NGBATIS](https://github.com/nebula-contrib/ngbatis)
     * Swagger Springboot Demo：[nebula-swagger-demo](https://github.com/nebula-contrib/nebula-swagger-demo)
     * Java ORM：[graph-ocean](https://github.com/nebula-contrib/graph-ocean)
-    * 搞定 JDBC：[nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)
+    * 对接 JDBC：[nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)
     * Python ORM：[nebula-carina](https://github.com/nebula-contrib/nebula-carina)
     * Golang ORM：[norm](https://github.com/nebula-contrib/norm)
 * 数据工具
